--- a/style.css
+++ b/style.css
@@ -61,8 +61,6 @@ h1, h2, h3, b, input {
 	font-family: "Lucida Console", "Courier New", monospace
 }
 
-
-
 .treeNode {
 	height: 100px;
 	width: 100px;
@@ -74,31 +72,19 @@ h1, h2, h3, b, input {
 	font-family: "Lucida Console", "Courier New", monospace;
 	color: rgba(0, 0, 0, 0.5);
 	text-shadow: var(--hqProperty3);
-	padding: 0;
-	margin: 0 10px 0 10px;
 }
-
-
-.treeButton {
-	height: 100px;
-	width: 100px;
-	border: var(--hqProperty1);
-	border-color: rgba(0, 0, 0, 0.125);
-	border-radius: 33%;
-	box-shadow: var(--hqProperty2a), var(--hqProperty2b);
-	font-size: 40px;
-	font-family: "Lucida Console", "Courier New", monospace;
-	color: rgba(0, 0, 0, 0.5);
-	text-shadow: var(--hqProperty3);
-	padding: 0;
-	margin: 0 10px 0 10px;
-}
-
 
 .smallNode {
 	height: 60px;
 	width: 60px;
+	border: var(--hqProperty1);
+	border-color: rgba(0, 0, 0, 0.125);
+	border-radius: 50%;
+	box-shadow: var(--hqProperty2a), var(--hqProperty2b);
 	font-size: 30px;
+	font-family: "Lucida Console", "Courier New", monospace;
+	color: rgba(0, 0, 0, 0.5);
+	text-shadow: var(--hqProperty3);
 }
 
 
@@ -113,26 +99,20 @@ h1, h2, h3, b, input {
 
 .can:hover {
 	transform: scale(1.15, 1.15);
-	box-shadow: 0 0 20px var(--points)
+	box-shadow: 0px 0px 20px var(--points)
 }
 
-
-.resetNotify {
-	box-shadow: var(--hqProperty2a), 0 0 8px #ffffff;
+.treeNode.notify {
+	transform: scale(1.1, 1.1);
+	border-color: rgba(0, 0, 0, 0.125);
+	box-shadow: var(--hqProperty2a), 0px 0px 20px #ff0000;
 	z-index: 3
 }
 
 .treeNode.can:hover {
 	transform: scale(1.15, 1.15);
-	box-shadow: var(--hqProperty2a), 0 0 20px var(--points);
+	box-shadow: var(--hqProperty2a), 0px 0px 20px var(--points);
 	z-index: 4
-}
-
-.notify {
-	transform: scale(1.05, 1.05);
-	border-color: rgba(0, 0, 0, 0.125);
-	box-shadow: var(--hqProperty2a), 0 0 20px #ff0000;
-	z-index: 3
 }
 
 .bought {
@@ -142,8 +122,8 @@ h1, h2, h3, b, input {
 
 .back {
 	position: absolute;
-	top: 0;
-	left: 0;
+	top: 0px;
+	left: 0px;
 	background-color: transparent;
 	border: 1px solid transparent;
 	color: var(--color);
@@ -151,21 +131,9 @@ h1, h2, h3, b, input {
 	cursor: pointer;
 }
 
-.other-back {
-	position: absolute;
-	top: 0;
-	left: 60px;
-	background-color: transparent;
-	border: 1px solid transparent;
-	color: var(--color);
-	font-size: 60px;
-	cursor: pointer;
-}
-
-
 .back:hover {
 	transform: scale(1.1, 1.1);
-	text-shadow: 0 0 7px var(--color);
+	text-shadow: 0px 0px 7px var(--color);
 }
 
 .barBase {
@@ -176,7 +144,7 @@ h1, h2, h3, b, input {
 
 .barBorder {
 	border: 2px solid;
-	border-radius: 10px;
+	border-radius: 10%;
 	border-color: var(--color);
 	overflow: hidden;
 	-webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC);
@@ -185,7 +153,7 @@ h1, h2, h3, b, input {
 
 .overlayTextContainer {
 	z-index: 3;
-	border-radius: 10px;
+	border-radius: 10%;
 	vertical-align: middle;
 	display: flex;
 	justify-content: center;
@@ -210,17 +178,17 @@ h1, h2, h3, b, input {
 	color: var(--color);
 	font-size: 20px;
 	cursor: pointer;
-	padding: 5px 20px;
-	margin: 5px;
-	border-radius: 10px;
+	padding: 5px 20px 5px 20px;
+	margin: 5px 5px 5px 5px;
+	border-radius: 25%;
 	border: 2px solid;
-	color: var(--color);
+	border-color: rgba(0, 0, 0, 0.125);
 
 }
 
 .tabButton:hover {
 	transform: scale(1.1, 1.1);
-	text-shadow: 0 0 7px var(--color);
+	text-shadow: 0px 0px 7px var(--color);
 }
 
 .reset {
@@ -248,10 +216,10 @@ h1, h2, h3, b, input {
 	border-color: rgba(0, 0, 0, 0.125);
 	font-size: 10px;
 	color: white;
-	text-shadow: 0 0 2px #000000;
+	text-shadow: 0px 0px 2px #000000;
 }
 .achievement:hover {
-	box-shadow: 0 0 10px var(--points);
+	box-shadow: 0px 0px 10px var(--points);
 	z-index: 7;
 }
 
@@ -292,13 +260,13 @@ h1, h2, h3, b, input {
 
 #points {
 	color: var(--points);
-	text-shadow: 0 0 10px var(--points);
+	text-shadow: 0px 0px 10px var(--points);
 }
 
 #optionWheel {
 	position: absolute;
-	top: 0;
-	left: 0;
+	top: 0px;
+	left: 0px;
 	height: 50px;
 	width: 50px;
 	cursor: pointer;
@@ -323,8 +291,8 @@ h1, h2, h3, b, input {
 
 #info:hover {
 	transform: scale(1.2, 1.2);
-	text-shadow: 5px 0 10px #02f2f2,
-              -3px 0 12px #02f2f2;
+	text-shadow: 5px 0px 10px #02f2f2,
+              -3px 0px 12px #02f2f2;
 }
 
 #discord {
@@ -359,7 +327,7 @@ h1, h2, h3, b, input {
 	top: 4px;
 	text-align: right;
 	color: var(--points);
-	text-shadow: 0 0 10px var(--points);
+	text-shadow: 0px 0px 10px var(--points);
 	cursor: pointer;
 }
 
@@ -378,6 +346,7 @@ a {
 	display: block;
 	font-size: 20px;
 	color: #41f5f5;
+	text-decoration-line: none;
 	cursor: pointer;
 	font-family: "Lucida Console", "Courier New", monospace;
 	-webkit-text-stroke-width: 1px;
@@ -387,8 +356,8 @@ a {
 
 .link:hover {
 	transform: scale(1.2, 1.2);
-	text-shadow: 5px 0 10px #02f2f2,
-              -3px 0 12px #02f2f2;
+	text-shadow: 5px 0px 10px #02f2f2,
+              -3px 0px 12px #02f2f2;
 }
 
 .opt {
@@ -397,7 +366,7 @@ a {
 	border-radius: 25%;
 	border: 4px solid;
 	background-color: var(--color);
-	border-color: rgba(0, 0, 0, 0.125);
+	border-color: rgba(255, 255, 255, 0.125) rgba(0, 0, 0, 0.25) rgba(0, 0, 0, 0.25) rgba(255, 255, 255, 0.125);
 	color: rgba(0, 0, 0, 0.5);
 	cursor: pointer;
 }
@@ -420,9 +389,6 @@ a {
 
 .milestone {
 	width: 100%;
-	min-width: 120px;
-	padding-left: 5px;
-	padding-right: 5px;
 	height: 75px;
 	background-color: #bf8f8f;
 	border: 4px solid;
@@ -433,10 +399,6 @@ a {
 
 .milestoneDone {
 	width: 100%;
-	min-width: 120px;
-	padding-left: 5px;
-	padding-right: 5px;
-
 	height: 75px;
 	background-color: #77bf5f;
 	border: 4px solid;
@@ -545,7 +507,7 @@ ul {
 
 [tooltip] {
 	position: relative;
-	z-index: 99999999 !important
+	z-index: 999999 !important
 }
 
 [tooltip]:before,
@@ -556,7 +518,6 @@ ul {
 	opacity: 0;
 	pointer-events: none;
 	white-space: pre-wrap;
-	-webkit-transform:translate3d(0,0,0);
 }
 
 [tooltip]:before {
@@ -598,12 +559,11 @@ ul {
 
 [tooltip]:hover:before,
 [tooltip]:hover:after {
-	filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=100);
 	visibility: visible;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+	filter: progid: DXImageTransform.Microsoft.Alpha(Opacity=100);
 	opacity: 1;
 	white-space: pre-wrap;
-	-webkit-transform:translate3d(0,0,0);
-
 }
 
 #loadingSection {
@@ -614,7 +574,7 @@ ul {
 
 .treeOverlay {
 	z-index: 200000;
-	pointer-events:none;
+	pointer-events:none; 
 	overflow:hidden;
 }
 
@@ -636,46 +596,4 @@ button > * {
 
 .ghost {
 	visibility: hidden
-}
-
-.story {
-    width: 600px;
-    max-width: 95%;
-    border-bottom: solid 4px;
-    border-radius: 8px;
-    margin-bottom: 8px;
-    text-align: left;
-}
-
-.story-title {
-    text-align: left;
-    font-size: 24px;
-    color: black;
-    cursor: pointer;
-    border: none;
-    padding: 2px;
-    border-radius: 8px 8px 0 0;
-}
-
-.story-toggle {
-    border: none;
-    background: black;
-    color: white;
-    font-size: 20px;
-    pointer-events: none;
-    width: 1em;
-    display: inline-block;
-}
-
-.story-text {
-	padding: 2px;
-    border: solid 4px;
-    border-color: inherit;
-    border-radius: inherit;
-    border-top-left-radius: 0;
-    margin-bottom: -2px;
-}
-
-#treeTab td button {
-    margin: 0 10px;
 }
